software/pcx86/sys/dos/dresearch/3.40/README.md
---
layout: page
title: Digital Research DR DOS 3.40
permalink: /software/pcx86/sys/dos/dresearch/3.40/
redirect_from: /disks/pcx86/dos/dresearch/3.40/
machines:
  - id: ibm5170-drdos340
    type: pcx86
    config: /configs/pcx86/xml/machine/5170/ega/640kb/rev1/machine.xml
    autoMount:
      A:
        name: DR DOS 3.40 (Disk 1)
      B:
        name: DR DOS 3.40 (Disk 2)
---

Digital Research DR DOS 3.40
----------------------------

{% include machine.html id="ibm5170-drdos340" %}

### Directory of DR DOS 3.40 (Disk 1)

	 Volume in drive A has no label

	Directory of A:\

	DRBIOS   SYS     16288 01-25-89  12:15p
	DRBDOS   SYS     39201 01-25-89  12:15p
	COMMAND  COM     33104 01-25-89  12:15p
	AUTOEXEC BAT        13 01-25-89  12:15p
	ANSI     SYS      4082 01-25-89  12:15p
	COUNTRY  SYS      5632 01-25-89  12:15p
	VDISK    SYS      3765 01-25-89  12:15p
	EMM386   SYS      8346 01-25-89  12:15p
	DRIVER   SYS      2150 01-25-89  12:15p
	EMMXMA   SYS      5995 01-25-89  12:15p
	ATTRIB   EXE     11080 01-25-89  12:15p
	CHKDSK   COM     20741 01-25-89  12:15p
	DISKCOPY COM     11345 01-25-89  12:15p
	FDISK    COM     20117 01-25-89  12:15p
	FORMAT   COM     17041 01-25-89  12:15p
	INSTALL  EXE     46411 01-25-89  12:15p
	GRAFTABL COM      5941 01-25-89  12:15p
	GRAPHICS COM      2697 01-25-89  12:15p
	KEYB     COM     10470 01-25-89  12:15p
	MODE     COM     10053 01-25-89  12:15p
	REPLACE  EXE     15078 01-25-89  12:15p
	SYS      COM      9686 01-25-89  12:15p
	XCOPY    EXE     18444 01-25-89  12:15p
	RDISK    SYS      3122 03-17-87  10:54a
	CONFIG   SYS        18 03-20-87  10:15a
	RTC      EXE     15872 05-23-88   1:26p
	READ     ME       1751 02-25-87   2:11p
	       27 file(s)     338443 bytes

	Total files listed:
	       27 file(s)     338443 bytes
	                        9216 bytes free

### Directory of DR DOS 3.40 (Disk 2)

	 Volume in drive A has no label

	Directory of A:\

	BACKUP   COM     18737 01-25-89  12:15p
	COMP     COM     11127 01-25-89  12:15p
	DISKCOMP COM     11297 01-25-89  12:15p
	EDITOR   EXE     22884 01-25-89  12:15p
	FASTOPEN EXE       675 01-25-89  12:15p
	FIND     EXE     12908 01-25-89  12:15p
	LABEL    COM      6328 01-25-89  12:15p
	PASSWORD EXE     13348 01-25-89  12:15p
	PRINT    COM     17106 01-25-89  12:15p
	RESTORE  COM     15087 01-25-89  12:15p
	RECOVER  COM     12922 01-25-89  12:15p
	SHARE    EXE       625 01-25-89  12:15p
	SID86    EXE     28160 01-25-89  12:15p
	SORT     EXE      8884 01-25-89  12:15p
	TOUCH    EXE     12140 01-25-89  12:15p
	TREE     COM     10202 01-25-89  12:15p
	XDEL     EXE     10626 01-25-89  12:15p
	XDIR     EXE     14986 01-25-89  12:15p
	       18 file(s)     228042 bytes

	Total files listed:
	       18 file(s)     228042 bytes
	                      125952 bytes free

